fixed output box alignment to right side

--- a/style.css
+++ b/style.css
@@ -81,6 +81,9 @@ html, body, [class*="css"] {
     border-radius: 16px;
     border-left: 6px solid #22c55e;
     box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    margin-left:auto;
+    margin-right:0;
+    width: 50%;
 }
 
 /* ---------------- INPUTS ---------------- */
